<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:ignore="UseCompoundDrawables">

    <RadioGroup
        android:id="@+id/groupProvincias"
        android:padding="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


            <RadioButton
                android:id="@+id/Bizkaia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bizkaia"
                />
            <RadioButton
                android:id="@+id/Gipuzkoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gipuzkoa"
                />
            <RadioButton
                android:id="@+id/Araba"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/araba"
                />
            <RadioButton
                android:id="@+id/Nafarroa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nafarroa"
                />
            <RadioButton
                android:id="@+id/Lapurdi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lapurdi"
                />
            <RadioButton
                android:id="@+id/Zuberoa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zuberoa"
                />
            <RadioButton
                android:id="@+id/Portugalete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/portugalete"
                />

    </RadioGroup>

    <Button
        android:id="@+id/btnProvincia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_tu_provincia"
        android:layout_gravity="center"/>
</LinearLayout>